--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,22 +22,21 @@ pyvisa = "*"
 mysql-connector-python = "*"
 opencv-python = "*"
 scikit-image = "*"
-azcam = { git = "https://github.com/mplesser/azcam.git", branch = "main" }
-azcam-monitor = { git = "https://github.com/mplesser/azcam-monitor.git", branch = "main" }
-azcam-fastapi = { git = "https://github.com/mplesser/azcam-fastapi.git", branch = "main" }
-azcam-arc = { git = "https://github.com/mplesser/azcam-arc.git", branch = "main" }
-azcam-archon = { git = "https://github.com/mplesser/azcam-archon.git", branch = "main" }
-azcam-ascom = { git = "https://github.com/mplesser/azcam-ascom.git", branch = "main" }
-azcam-cryocon = { git = "https://github.com/mplesser/azcam-cryocon.git", branch = "main" }
-azcam-ds9 = { git = "https://github.com/mplesser/azcam-ds9.git", branch = "main" }
-azcam-expstatus = { git = "https://github.com/mplesser/azcam-expstatus.git", branch = "main" }
-azcam-focus = { git = "https://github.com/mplesser/azcam-focus.git", branch = "main" }
-azcam-imageserver = { git = "https://github.com/mplesser/azcam-imageserver.git", branch = "main" }
-azcam-mag = { git = "https://github.com/mplesser/azcam-mag.git", branch = "main" }
-azcam-observe = { git = "https://github.com/mplesser/azcam-observe.git", branch = "main" }
-azcam-scripts = { git = "https://github.com/mplesser/azcam-scripts.git", branch = "main" }
-azcam-testers = { git = "https://github.com/mplesser/azcam-testers.git", branch = "main" }
-azcam-webtools = { git = "https://github.com/mplesser/azcam-webtools.git", branch = "main" }
+azcam-monitor = { git = "https://github.com/mplesser/azcam-monitor.git"}
+azcam-fastapi = { git = "https://github.com/mplesser/azcam-fastapi.git"}
+azcam-arc = { git = "https://github.com/mplesser/azcam-arc.git"}
+azcam-archon = { git = "https://github.com/mplesser/azcam-archon.git"}
+azcam-ascom = { git = "https://github.com/mplesser/azcam-ascom.git"}
+azcam-cryocon = { git = "https://github.com/mplesser/azcam-cryocon.git"}
+azcam-ds9 = { git = "https://github.com/mplesser/azcam-ds9.git"}
+azcam-expstatus = { git = "https://github.com/mplesser/azcam-expstatus.git"}
+azcam-focus = { git = "https://github.com/mplesser/azcam-focus.git"}
+azcam-imageserver = { git = "https://github.com/mplesser/azcam-imageserver.git"}
+azcam-mag = { git = "https://github.com/mplesser/azcam-mag.git"}
+azcam-observe = { git = "https://github.com/mplesser/azcam-observe.git"}
+azcam-scripts = { git = "https://github.com/mplesser/azcam-scripts.git"}
+azcam-testers = { git = "https://github.com/mplesser/azcam-testers.git"}
+azcam-webtools = { git = "https://github.com/mplesser/azcam-webtools.git"}
 
 [tool.poetry.dev-dependencies]
 
