--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,46 +1,47 @@
-[tool.poetry]
+[project]
 name = "azcam-itl"
-version = "22.2"
+version = "22.2.1"
 description = "Azcam extension for ITL systems"
-authors = ["Michael Lesser <mlesser@arizona.edu>"]
-license = "LICENSE"
+license = {file ="LICENSE"}
 readme = "README.md"
+requires-python = ">=3.9"
 keywords=["ccd", "imaging", "astronomy", "sensors"]
-repository = "https://github.com/mplesser/azcam-itl/"
-documentation = "https://mplesser.github.io/azcam/"
-
-[tool.poetry.dependencies]
-python = "^3.9,<3.11"
-numpy = "*"
-ipython = "*"
-rich = "*"
-matplotlib = "*"
-keyring = "*"
-pyserial = "*"
-pyvisa = "*"
-mysql-connector-python = "*"
-opencv-python = "*"
-scikit-image = "*"
-
-azcam = "*"
-azcam-monitor = "*"
-azcam-fastapi = "*"
-azcam-arc = "*"
-azcam-archon = "*"
-azcam-ascom = "*"
-azcam-cryocon = "*"
-azcam-ds9 = "*"
-azcam-expstatus = "*"
-azcam-focus = "*"
-azcam-imageserver = "*"
-azcam-mag = "*"
-azcam-observe = "*"
-azcam-scripts = "*"
-azcam-testers = "*"
-azcam-webtools = "*"
-
-[tool.poetry.dev-dependencies]
+authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
+dependencies = [
+    "numpy",
+    "ipython",
+    "rich",
+    "matplotlib",
+    "keyring",
+    "pyserial",
+    "pyvisa",
+    "mysql-connector-python",
+    "opencv-python",
+    "scikit-image",
+    "azcam",
+    "azcam-monitor",
+    "azcam-fastapi",
+    "azcam-arc",
+    "azcam-archon",
+    "azcam-ascom",
+    "azcam-cryocon",
+    "azcam-ds9",
+    "azcam-expstatus",
+    "azcam-focus",
+    "azcam-imageserver",
+    "azcam-mag",
+    "azcam-observe",
+    "azcam-scripts",
+    "azcam-testers",
+    "azcam-webtools",
+]
+[project.urls]
+Documentation = "https://mplesser.github.io/azcam/"
+Repository = "https://github.com/mplesser/azcam-itl/"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[tool.flit.module]
+name = "azcam_itl"
