--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "mysql-connector-python",
     "opencv-python-headless",
     "scikit-image",
+    "pywin32",
     "azcam",
     "azcam-monitor",
     "azcam-fastapi",
