--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,22 @@
 [project]
 name = "azcam-itl"
-version = "22.3.0"
+version = "22.4"
 description = "Azcam extension for ITL systems"
-license = {file ="LICENSE"}
+license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.8"
-keywords=["ccd", "imaging", "astronomy", "sensors"]
-authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
+keywords = ["ccd", "imaging", "astronomy", "sensors"]
+authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
 dependencies = [
     "numpy",
-    "ipython",
+    "ipython==8.10",
     "rich",
     "matplotlib",
     "keyring",
     "pyserial",
     "pyvisa",
     "opencv-python-headless",
+    "pyside6",
     "azcam",
 ]
 [project.urls]
