--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,4 @@
 [project]
-name = "azcam-itl"
-version = "23.0"
-description = "Azcam extension for ITL systems"
-license = { file = "LICENSE" }
-readme = "README.md"
-requires-python = ">=3.8"
-keywords = ["ccd", "imaging", "astronomy", "sensors"]
-authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
 dependencies = [
     "numpy",
     "ipython",
@@ -19,7 +11,17 @@ dependencies = [
     "pyside6",
     "azcam-testers",
     "azcam",
+    "azcam-server",
+    "azcam-console",
 ]
+name = "azcam-itl"
+version = "23.0"
+description = "Azcam extension for ITL systems"
+license = { file = "LICENSE" }
+readme = "README.md"
+requires-python = ">=3.8"
+keywords = ["ccd", "imaging", "astronomy", "sensors"]
+authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
 [project.urls]
 Documentation = "https://azcam.readthedocs.io/"
 Repository = "https://github.com/mplesser/azcam-itl/"
