--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
 ]
 name = "azcam-itl"
 version = "24.1"
-description = "Azcam extension for ITL systems"
+description = "Azcam environment for ITL systems"
 license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.10"
