--- a/support/parameters_monitor_itl.ini
+++ b/support/parameters_monitor_itl.ini
@@ -1,6 +1,6 @@
 [ProcessITL]
 name = azcam-itl
-path = "C:\azcam\azcam-itl\support\start_server_itl.bat"
+path = "C:\azcam\azcam-itl\support\start_server_itl.py"
 cmd_port= 2402
 flags = 0
 start = 0
